--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,219 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% block content %}
-    <h1>About Page</h1>
-{% endblock %}    
+<h2>{{ page_title }}</h2>
+<p>
+    The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest
+    in recapturing his long lost family inheritance. (Thorin's grandfather had been the King under the Mountain when
+    Smaug came and took it.) Remembering that he had once known an adventurous Hobbit on his travels in the Shire,
+    Gandalf decided to add Bilbo to their company because he knew that stealth and cunning were preferable to force.
+    Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from rash
+    action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned
+    to leave on other business, welcomed a fourteenth to fill into their party.
+</p>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Thorin Oakenshield</h3>
+        <p>
+            Thorin II was born in TA 2746 to Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
+            youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
+            2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
+            participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
+            the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
+            found on the ground as a shield, he gained the epithet "Oakenshield," which would remain with him even
+            in death
+        </p>
+    </div>
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/3/39/ThorinOakenshieldOfTheHobbit.jpeg" alt="">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg" alt="">
+    </div>
+    <div class="col-md-7">
+        <h3>Fili & Kili</h3>
+        <p>
+            Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also
+            nephews of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing
+            feature was his long nose, the longest of any of the Dwarves in Thorin's company.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Óin</h3>
+        <p>
+            Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. Óin's uncle was Fundin,
+            the father of Balin and Dwalin. He usually wore a brown-hooded cloak when travelling. Óin fought in the
+            Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined with Thorin and Company on the
+            quest to reclaim the Lonely Mountain wearing a brown hood.
+        </p>
+    </div>
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/e/e8/Oin.jpg" alt="">
+    </div>
+
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg" alt="">
+    </div>
+    <div class="col-md-7">
+        <h3>Gloin</h3>
+        <p>
+            Glóin was born in TA 2783, after the dragon Smaug desolated Erebor. He was the younger child of Gróin and
+            younger brother of Óin.
+            In TA 2799, Glóin was known to have fought in the Battle of Azanulbizar, the last battle of the War of the
+            Dwarves and Orcs, though it is unknown how significant his contribution was, being 16 years old.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Balin</h3>
+        <p>
+            Balin was likely born in the Lonely Mountain before the coming of the dragon Smaug. He had a younger brother
+            named Dwalin, and was amongst those driven from their homes when Smaug attacked the Lonely Mountain.
+            Afterwards, he may have lived in Dunland as a refugee, before fighting in the War of the Dwarves and Orcs
+            which culminated in the Battle of Azanulbizar. Many years later, in approximately TA 2841, he accompanied
+            Thráin II, the father of Thorin, when he attempted to go back to the Lonely Mountain himself, but Thráin was
+            captured and lost.
+        </p>
+    </div>
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/5/52/Balin.jpg" alt="">
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg" alt="">
+        </div>
+        <div class="col-md-7">
+            <h3>Dwalin</h3>
+            <p>
+                Dwalin was the first Dwarf to arrive, alone, at Bag End when the unexpected party planned by Thorin and
+                Gandalf began at Bilbo Baggins' hobbit hole. He was wearing a dark-green hood and a golden belt, his
+                tucked into the belt and walked in as if expected, which greatly surprised Bilbo. Soon Balin arrived and
+                he and Dwalin sat talking while Bilbo kept answering the door for the arrival of more and more Dwarves.
+                Later, when Bilbo griped aloud in his kitchen about the lack of help in setting out refreshments, Dwalin
+                and Balin were the first (followed by Fíli and Kíli) to lend a hand. Later still, when the Dwarves
+                filled Bag End with music, Dwalin played on a viol as big as himself.
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Ori</h3>
+            <p>
+                Ori lived in Thorin's Halls in the northern Blue Mountains for many years. In the year TA 2941, Ori
+                became a member of Thorin's Company and travelled with Thorin, Gandalf, Bilbo Baggins, and the other
+                Dwarves on the quest for the Lonely Mountain, culminating in the death of Smaug. Finally, he and the
+                other Dwarves of Thorin's Company fought in the Battle of Five Armies, which he survived.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="">
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/8/89/Dori-markhadlow-p.jpg" alt="">
+            </div>
+            <div class="col-md-7">
+                <h3>Dori</h3>
+                <p>
+                    Before the Quest of Erebor, Dori lived in Thorin's Halls in the northern Blue Mountains with Nori
+                    and Ori. In TA 2941, the three became part of Thorin and Company, befriending Bilbo Baggins and
+                    traveling with him in search of Smaug's treasure at the Lonely Mountain.
+                </p>
+            </div>
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h3>Nori</h3>
+                <p>
+                    Nori, as was his brother Dori, was a capable flutist, and both seem to have carried their flutes
+                    with them. Both shared Bilbo's liking for regular meals. Before the Quest for the Lonely Mountain,
+                    Nori lived in Thorin's Halls in the northern Blue Mountains with his two brothers.
+                </p>
+            </div>
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/d/db/Nori-jedbrophy-p.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/b/b5/Bifur.jpg" alt="">
+            </div>
+            <div class="col-md-7">
+                <h3>Bifur</h3>
+                <p>
+                    Answering Thorin Oakenshield's Quest of Erebor, he went to the meeting at Bag End with his cousins
+                    Bofur and Bombur, where he played the clarinet. On the quest, he was nearly cooked on a spit by
+                    Trolls and nearly killed by Goblins, Wargs, Stone giants, Great Spiders, and the dragon Smaug
+                    himself. A valiant and brave warrior, Bifur never gave up, and fought in the Battle of Five Armies
+                    with all his strength, killing numerous enemies. In the fallout of the great battle, Dáin II
+                    Ironfoot gave him his share of the treasure, and he retired to live at the Lonely Mountain
+                </p>
+            </div>
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h3>Bofur</h3>
+                <p>
+                    While answering Thorin Oakenshield's quest to Erebor, Bofur went to the meeting at Bag End with his
+                    brother Bombur and cousin Bifur. He accompanied Thorin, Gandalf, Bilbo Baggins, and rest of Thorin's
+                    Company across Wilderland to the Lonely Mountain in order to reclaim the Dwarves' treasure from the
+                    dragon Smaug. Following the dragon's demise, Bofur participated in and survived the Battle of Five
+                    Armies, receiving his fourteenth share of the treasure as agreed upon.
+                </p>
+            </div>
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/7/77/Bofur.jpg/" alt="">
+            </div>
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/5/5f/Bombur-stephenhunter-p.jpg" alt="">
+            </div>
+            <div class="col-md-7">
+                <h3>Bombur</h3>
+                <p>
+                    Bombur's parentage is unknown. He was the brother of Bofur and cousin of Bifur. Bombur was not of
+                    Durin's line, although he was descended from the Dwarves of Khazad-dûm. His birth date is unknown,
+                    though it fell somewhere between TA 2763 and TA 2859; the brothers Fíli and Kíli were the youngest
+                    of the thirteen "by some fifty years," and, after Thorin was captured, Balin was "the eldest left."
+                    Fíli was born in TA 2859, and Balin was born in TA 2763. Bombur was thus roughly 150 years old
+                    during the quest. Prior to the journey, Bombur likely resided in the Blue Mountains alongside
+                    Thorin, after the loss of Thráin II.
+                </p>
+            </div>
+        </div>
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h3>Gandalf</h3>
+                <p>
+                    Originally called Olórin, he was accounted as the wisest of the Maiar (with the possible exception
+                    of Melian). He was created by Ilúvatar before the Music of the Ainur, and was at the beginning of
+                    Time amongst the Ainur who entered into Eä.In his "youth" he became one of the Maiar who served
+                    Manwë, Varda, Irmo, and Nienna. He was associated with light and fire, much like Varda, yet his
+                    ways often took him to Nienna, from whom he learned pity and patience.
+                </p>
+            </div>
+            <div class="col-md-5">
+                <img src="https://static.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg" alt="">
+            </div>
+        </div>
+        {% endblock %}
